[package]
name = "rusty64"
version = "0.0.3"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Emulator platform for 8-bit computers"
homepage = "https://github.com/zargony/rusty64"
repository = "https://github.com/zargony/rusty64"
readme = "README.md"
keywords = ["emulator", "8bit", "c-64"]
license = "MIT"

[dependencies]
log = "0.3"
env_logger = "0.3"
num = "0.1"
rand = "0.3"
