[package]
name = "rusty64"
version = "0.0.4"
authors = ["Andreas Neuhaus <git@zargony.com>"]
edition = "2021"
description = "Emulator platform for 8-bit computers"
readme = "README.md"
repository = "https://github.com/zargony/rusty64"
license = "MIT"
keywords = ["emulator", "8bit", "c-64"]
categories = ["emulators"]

[dependencies]
bitflags = "2.4"
env_logger = "0.10"
log = "0.4"
num-traits = "0.2"
rand = "0.8"
